<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_baseline_reply_24"
        android:title="@string/reply"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_add_favorite"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/add_favorite"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_24"
        android:title="@string/copy"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_24"
        android:title="@string/forward"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
</menu>